--- a/DosPaes/ClientApp/src/app/commun/list/list.component.html
+++ b/DosPaes/ClientApp/src/app/commun/list/list.component.html
@@ -20,7 +20,7 @@
                   <h3 class="panel-title">Lista de  {{text}}</h3>
                 </div>
                 <div class="col col-xs-6 text-right">
-                  <button type="button" (click)="redirectToCreate()" class="btn btn-sm btn-primary btn-create">Novo</button>
+                  <button type="button" (click)="redirectToCreate()" class="btn btn-sm btn-primary btn-create btnStyle">Novo</button>
                 </div>
               </div>
             </div>
