--- a/DosPaes/ClientApp/src/app/header/header.component.html
+++ b/DosPaes/ClientApp/src/app/header/header.component.html
@@ -9,6 +9,8 @@
             <li><a (click)="redirectToHome()"><i class="fa fa-book"></i> <span>Home</span></a></li>
             <li><a (click)="redirectToProduto()"><i class="fa fa-circle-o"></i> <span>Produto</span></a></li>
             <li><a (click)="redirectToCategoria()"><i class="fa fa-circle-o"></i> <span>Categoria</span></a></li>
+            <li><a (click)="redirectToCustos()"><i class="fa fa-circle-o"></i> <span>Despesas</span></a></li>
+            <li><a (click)="redirectToVendas()"><i class="fa fa-circle-o"></i> <span>Vendas</span></a></li>
             <li><a (click)="logMeOut()"><i class="fa fa-th"></i> <span>Log-Out</span></a></li>
         </ul>
     </section>
