--- a/DosPaes/ClientApp/src/app/categoria/add-categoria/add-categoria.component.html
+++ b/DosPaes/ClientApp/src/app/categoria/add-categoria/add-categoria.component.html
@@ -1,45 +1,15 @@
-<section class="content-header">
-  <h1>
-    Categoria
-    <small>Cadastro de categoria</small>
-  </h1>
-  <ol class="breadcrumb">
-    <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-    <li><a (click)="redirectToList()"><i class="fa fa-list"></i> Lista</a></li>
-    <li class="active">Categoria</li>
-  </ol>
-</section>
-<section class="content">
-  <!-- quick email widget -->
-  <div class="box box-info">
-    <div class="box-header ui-sortable-handle" style="cursor: move;">
-      <i class="fa fa-plus"></i>
-
-      <h3 class="box-title">Nova Categoria</h3>
-    </div>
-    <div class="box-body">
+<app-crud-head [submitted]="submitted" [hasError]="hasError" [msgError]="msgError"
+[msgSucesso]="msgSucess" [newText]= "newText" [type]="type" [iconHead]="iconHead" [redirectToListUrl]="redirectToListUrl">
+  <div contentForm>
       <div class="submit-form">
-        <div *ngIf="!submitted">
           <div class="form-group">
-            <label for="descricao">Descricao</label>
+            <label for="descricao">Descrição</label>
             <input type="text" class="form-control" id="descricao" required [(ngModel)]="categoria.descricao"
               name="descricao" />
-          </div>
-          <button id="btnSalvar" (click)="saveProduto()" class="btn btn-success">Savar</button>
         </div>
-
-        <div *ngIf="submitted">
-          <h4>Produto cadastrado com sucesso!</h4>
-          <button class="btn btn-success" (click)="newProduto()">Novo</button>
-        </div>
-        <br />
-        <div *ngIf="hasError">
-          <div class="alert alert-danger" role="alert">
-            Erro ao cadastrar categoria: {{msgError.error}}
-          </div>
-        </div>
+        <button id="btnSalvar" (click)="saveProduto()" class="btn btn-success btnStyle">Savar</button>
       </div>
-
-    </div>
   </div>
-</section>
+</app-crud-head>
+<app-load-component [loading]="loading"></app-load-component>
+
