--- a/DosPaes/ClientApp/src/app/produto/add-produto/add-produto.component.html
+++ b/DosPaes/ClientApp/src/app/produto/add-produto/add-produto.component.html
@@ -1,9 +1,9 @@
 <app-crud-head [submitted]="submitted" [hasError]="hasError" [msgError]="msgError"
-[msgSucesso]="msgSucess" [newText]= "newText" [type]="type">
+[msgSucesso]="msgSucess" [newText]= "newText" [type]="type" [iconHead]="iconHead" [redirectToListUrl]="redirectToListUrl">
   <div contentForm>
 <div class="submit-form">
     <div class="form-group">
-      <label for="descricao">Descricao</label>
+      <label for="descricao">Descrição</label>
       <input type="text" class="form-control" id="descricao" required [(ngModel)]="produto.descricao"
         name="descricao" />
     </div>
@@ -26,3 +26,4 @@
   </div>
 </div>
 </app-crud-head>
+<app-load-component [loading]="loading"></app-load-component>
