--- a/DosPaes/ClientApp/src/app/produto/edit-produto/edit-produto.component.html
+++ b/DosPaes/ClientApp/src/app/produto/edit-produto/edit-produto.component.html
@@ -1,5 +1,5 @@
 <app-crud-head [submitted]="submitted" [hasError]="hasError" [msgError]="msgError" [msgSucesso]="msgSucess"
-  [newText]="newText" [type]="type">
+  [newText]="newText" [type]="type" [iconHead]="iconHead" [redirectToListUrl]="redirectToListUrl">
   <div contentForm>
     <div class="submit-form">
 
@@ -23,3 +23,4 @@
     </div>
   </div>
 </app-crud-head>
+<app-load-component [loading]="loading"></app-load-component>
