--- a/DosPaes/ClientApp/src/app/components/home/home.component.html
+++ b/DosPaes/ClientApp/src/app/components/home/home.component.html
@@ -17,7 +17,7 @@
             <!-- small box -->
             <div class="small-box bg-teal">
                 <div class="inner">
-                    <h3>{{home.QntVedas}}</h3>
+                    <h3>{{home.QntVendas}}</h3>
 
                     <p>Quantidade Vendas</p>
                 </div>
