Realizando criação de novas funcionalidades, como controle de vendas e controle de produção

--- a/DosPaes/ClientApp/src/app/components/categoria/list-categoria/list-categoria.component.html
+++ b/DosPaes/ClientApp/src/app/components/categoria/list-categoria/list-categoria.component.html
@@ -3,6 +3,6 @@
 [tableColName]="tableColName"
 [columnKey]="columnKey"
 [urlRedirectToEdit]="redirectToEdit"
-[urlRedirectToDelete]="redirectToDelete" ></app-list>  
+[urlRedirectToDelete]="redirectToDelete" [tableHeadsCode]="tableHeadCode" ></app-list>  
 <app-load-component [loading]="loading"></app-load-component>
   
