--- a/DosPaes/ClientApp/src/app/components/header/header.component.html
+++ b/DosPaes/ClientApp/src/app/components/header/header.component.html
@@ -7,10 +7,12 @@
         <ul class="sidebar-menu tree" data-widget="tree">
             <li class="header">Navegação principal</li>
             <li><a (click)="redirectToHome()"><i class="fa fa-book"></i> <span>Home</span></a></li>
+            <li><a (click)="redirectToBoardVendas()"><i class="fa fa-circle-o"></i> <span>Controle Vendas</span></a></li>
             <li><a (click)="redirectToProduto()"><i class="fa fa-circle-o"></i> <span>Produto</span></a></li>
             <li><a (click)="redirectToCategoria()"><i class="fa fa-circle-o"></i> <span>Categoria</span></a></li>
             <li><a (click)="redirectToCustos()"><i class="fa fa-circle-o"></i> <span>Despesas</span></a></li>
             <li><a (click)="redirectToVendas()"><i class="fa fa-circle-o"></i> <span>Vendas</span></a></li>
+            <li><a (click)="redirectToCliente()"><i class="fa fa-circle-o"></i> <span>Cliente</span></a></li>
             <li><a (click)="logMeOut()"><i class="fa fa-th"></i> <span>Log-Out</span></a></li>
         </ul>
     </section>
