--- a/DosPaes/Pages/_ViewImports.cshtml
+++ b/DosPaes/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-@using Dos_Paes
-@namespace Dos_Paes.Pages
+@using DosPaes
+@namespace DosPaes.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
