--- a/DosPaes/ClientApp/src/app/app.component.html
+++ b/DosPaes/ClientApp/src/app/app.component.html
@@ -2,10 +2,10 @@
 
   <div class="wrapper">
 
-    
+
     <header class="main-header">
       <!-- Logo -->
-      <a href="index2.html" class="logo">
+      <a href="index.html" class="logo">
         <!-- mini logo for sidebar mini 50x50 pixels -->
         <span class="logo-mini"><b>D</b>P</span>
         <!-- logo for regular state and mobile devices -->
@@ -17,37 +17,15 @@
         <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
           <span class="sr-only">Toggle navigation</span>
         </a>
-  
-        <div class="navbar-custom-menu">
-         
-        </div>
       </nav>
     </header>
-
-   
-
-    <div class="content-wrapper" style="min-height: 959.667px;">
-    <!-- Content Header (Page header) CPVARIYANI -->
-   
-    <router-outlet></router-outlet>
- 
-    <!-- /.content -->
-  </div>
-  <footer class="main-footer">
-    <div class="pull-right hidden-xs">
-    </div>
-    <strong>Copyright © 2020 </strong> All rights  reserved.
-  </footer>
-
-
-  
-
-
-    <!-- <div class="master-body col-sm-12 clearfix no-padding">
+    <div class="content-wrapper">
       <router-outlet></router-outlet>
-    </div> -->
-
+    </div>
+    <footer class="main-footer">
+      <div class="pull-right hidden-xs">
+      </div>
+      <strong>Copyright © 2020 </strong> All rights reserved.
+    </footer>
   </div>
- 
-
 </div>
