--- a/DosPaes/ClientApp/src/app/components/custo/list-custo/list-custo.component.html
+++ b/DosPaes/ClientApp/src/app/components/custo/list-custo/list-custo.component.html
@@ -1,8 +1,4 @@
-<app-list [urlRedirectToCreate]="redirectToCreate" [text]="text" [tableHeads]="tableHead"
-[tableDatas]="records" 
-[tableColName]="tableColName"
-[columnKey]="columnKey"
-[urlRedirectToEdit]="redirectToEdit"
-[urlRedirectToDelete]="redirectToDelete" ></app-list>  
+<app-list [urlRedirectToCreate]="redirectToCreate" [text]="text" [tableHeads]="tableHead" [tableDatas]="records"
+    [tableColName]="tableColName" [columnKey]="columnKey" [urlRedirectToEdit]="redirectToEdit"
+    [urlRedirectToDelete]="redirectToDelete" [tableHeadsCode]="tableHeadCode"></app-list>
 <app-load-component [loading]="loading"></app-load-component>
-  
