--- a/DosPaes/ClientApp/src/app/components/home/home.component.html
+++ b/DosPaes/ClientApp/src/app/components/home/home.component.html
@@ -12,67 +12,95 @@
 
 <!-- Main content -->
 <section class="content">
-    <div class="row">
-        <div class="col-lg-3 col-xs-6">
-            <!-- small box -->
-            <div class="small-box bg-teal">
-                <div class="inner">
-                    <h3>{{home.QntVendas}}</h3>
+    <div class="box box-info">
+        <div class="box-header ui-sortable-handle" style="cursor: move;">
+            <i class="fa fa-line-chart"></i>
 
-                    <p>Quantidade Vendas</p>
-                </div>
-                <div class="icon">
-                    <i class="ion ion-bag"></i>
-                </div>
-                <a (click)="redirectToVendas()" class="small-box-footer">Mais informações <i
-                        class="fa fa-arrow-circle-right"></i></a>
-            </div>
+            <h3 class="box-title">Estatisticas</h3>
         </div>
-        <div class="col-lg-3 col-xs-6">
-            <!-- small box -->
-            <div class="small-box bg-green">
-                <div class="inner">
-                    <h3>R$ {{home.Vendas}}</h3>
+        <div class class="box-body">
+            <app-load-component [loading]="loading"></app-load-component>
+            <div class="row">
 
-                    <p>Vendas</p>
+                <div class="form-inline">
+                    <label class="label2" for="filter">Visualizar por:</label>
+                    <select (ngModelChange)="onChangeSelectedFilter($event)" [(ngModel)]="filter" class="form-control filter" name="filter" required>
+                        <option value="H" selected>Hoje</option>
+                        <option value="S">Semana atual</option>
+                        <option value="M">Mês atual</option>
+                        <option value="A">Ano atual</option>
+                        <option value="P">Período especifico</option>
+                    </select>
+                    <label *ngIf="isCustomFilterOn" class="label2">De:</label>
+                    <input *ngIf="isCustomFilterOn" class="form-control filter"  [(ngModel)]="dataInicio" type="date">
+                    <label *ngIf="isCustomFilterOn" class="label2">Até:</label>
+                    <input *ngIf="isCustomFilterOn" class="form-control filter" [(ngModel)]="dataFim" type="date">
+                    <button id="btnSalvar" (click)="filterData()" class="btn btn-default bntFiltrar">Filtrar</button>
                 </div>
-                <div class="icon">
-                    <i class="ion ion-bag"></i>
-                </div>
-                <a (click)="redirectToVendas()" class="small-box-footer">Mais informações <i
-                        class="fa fa-arrow-circle-right"></i></a>
-            </div>
-        </div>
-        <div class="col-lg-3 col-xs-6">
-            <!-- small box -->
-            <div class="small-box bg-red">
-                <div class="inner">
-                    <h3>R$ {{home.Despesas}}</h3>
 
-                    <p>Despesas</p>
-                </div>
-                <div class="icon">
-                    <i class="ion ion-stats-bars"></i>
-                </div>
-                <a (click)="redirectToDespesas()" class="small-box-footer">Mais Informações <i
-                        class="fa fa-arrow-circle-right"></i></a>
-            </div>
-        </div>
-        <!-- ./col -->
-        <div class="col-lg-3 col-xs-6">
-            <!-- small box -->
-            <div class="small-box bg-aqua">
-                <div class="inner">
-                    <h3>R$ {{home.SubTotal}}</h3>
+                <div class="col-lg-3 col-xs-6">
 
-                    <p>Resultado</p>
+                    <!-- small box -->
+                    <div class="small-box bg-teal">
+                        <div class="inner">
+                            <h3>{{home.QntVendas}}</h3>
+
+                            <p>Quantidade Vendas</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-bag"></i>
+                        </div>
+                        <a (click)="redirectToVendas()" class="small-box-footer">Mais informações <i
+                                class="fa fa-arrow-circle-right"></i></a>
+                    </div>
                 </div>
-                <div class="icon">
-                    <i class="ion ion-person-add"></i>
+                <div class="col-lg-3 col-xs-6">
+                    <!-- small box -->
+                    <div class="small-box bg-green">
+                        <div class="inner">
+                            <h3>R$ {{home.Vendas}}</h3>
+
+                            <p>Vendas</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-bag"></i>
+                        </div>
+                        <a (click)="redirectToVendas()" class="small-box-footer">Mais informações <i
+                                class="fa fa-arrow-circle-right"></i></a>
+                    </div>
                 </div>
-                <a class="small-box-footer"><i class="fa fa-arrow-circle-o-down"></i></a>
+                <div class="col-lg-3 col-xs-6">
+                    <!-- small box -->
+                    <div class="small-box bg-red">
+                        <div class="inner">
+                            <h3>R$ {{home.Despesas}}</h3>
+
+                            <p>Despesas</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-stats-bars"></i>
+                        </div>
+                        <a (click)="redirectToDespesas()" class="small-box-footer">Mais Informações <i
+                                class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
+                <!-- ./col -->
+                <div class="col-lg-3 col-xs-6">
+                    <!-- small box -->
+                    <div class="small-box bg-aqua">
+                        <div class="inner">
+                            <h3>R$ {{home.SubTotal}}</h3>
+
+                            <p>Resultado</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-person-add"></i>
+                        </div>
+                        <a class="small-box-footer"><i class="fa fa-arrow-circle-o-down"></i></a>
+                    </div>
+                </div>
             </div>
+
         </div>
     </div>
-    <app-load-component [loading]="loading"></app-load-component>
 </section>
