--- a/DosPaes/ClientApp/src/app/components/commun/crud-head/crud-head.component.html
+++ b/DosPaes/ClientApp/src/app/components/commun/crud-head/crud-head.component.html
@@ -20,7 +20,7 @@
       <ng-content select="[contentForm]"></ng-content>
       <div>
         <ng-content select="[buttons]"></ng-content>
-        <button id="btnRedirect" (click)="redirectToList()" class="btn btn-danger btnStyle">Voltar</button>
+        <button *ngIf="showButtonBack" id="btnRedirect" (click)="redirectToList()" class="btn btn-danger btnStyle">Voltar</button>
       </div>
      
       <ng-template [ngIf]="submitted">
