--- a/DosPaes/ClientApp/src/app/components/produto/list-produto/list-produto.component.html
+++ b/DosPaes/ClientApp/src/app/components/produto/list-produto/list-produto.component.html
@@ -1,5 +1,5 @@
-<app-list [urlRedirectToCreate]="redirectToCreate" [text]="text" [tableHeads]="tableHead"
-    [tableDatas]="records" [tableColName]="tableColName" [columnKey]="columnKey"
-    [urlRedirectToEdit]="redirectToEdit" [urlRedirectToDelete]="redirectToDelete" [service]="this.baseUrl"
-    [Filter]="Filter"></app-list>
+<app-list [urlRedirectToCreate]="redirectToCreate" [text]="text" [tableHeads]="tableHead" [tableDatas]="records"
+    [tableColName]="tableColName" [columnKey]="columnKey" [urlRedirectToEdit]="redirectToEdit"
+    [urlRedirectToDelete]="redirectToDelete" [service]="this.baseUrl" [Filter]="Filter"
+    [tableHeadsCode]="tableHeadCode"></app-list>
 <app-load-component [loading]="loading"></app-load-component>
