--- a/DosPaes/ClientApp/src/app/components/cliente/edit-cliente/edit-cliente.component.html
+++ b/DosPaes/ClientApp/src/app/components/cliente/edit-cliente/edit-cliente.component.html
@@ -1,3 +1,27 @@
-<p>
-  edit-cliente works!
-</p>
+<app-crud-head [submitted]="submitted" [hasError]="hasError" [msgError]="msgError" [msgSucesso]="msgSucess"
+  [newText]="newText" [type]="type" [iconHead]="iconHead" [redirectToListUrl]="redirectToListUrl">
+  <div contentForm>
+      <div class="form-group">
+        <label for="nome">Código</label>
+        <input readonly type="text" class="form-control" id="id" required [(ngModel)]="cliente.Id" name="id" />
+      </div>
+      <div class="form-group">
+        <label for="nome">Nome</label>
+        <input type="text" class="form-control" id="nome" required [(ngModel)]="cliente.Nome" name="nome" />
+      </div>
+      <div class="form-group">
+        <label for="endereco">Endereço</label>
+        <input type="text" class="form-control" id="endereco" required [(ngModel)]="cliente.Endereco" name="endereco" />
+      </div>
+      <div class="form-group">
+        <label for="telefone1">Telefone 1</label>
+        <input type="text" class="form-control" id="telefone1" required [(ngModel)]="cliente.Telefone1" name="telefone1" />
+      </div>
+      <div class="form-group">
+        <label for="telefone2">Telefone 2</label>
+        <input type="text" class="form-control" id="telefone2" required [(ngModel)]="cliente.Telefone2" name="telefone2" />
+      </div>
+      <button id="btnSalvar" (click)="saveCliente()" class="btn btn-success btnStyle">Savar</button>
+    </div>
+</app-crud-head>
+<app-load-component [loading]="loading"></app-load-component>
