--- a/DosPaes/ClientApp/src/app/components/header/header.component.html
+++ b/DosPaes/ClientApp/src/app/components/header/header.component.html
@@ -8,6 +8,7 @@
             <li class="header">Navegação principal</li>
             <li><a (click)="redirectToHome()"><i class="fa fa-book"></i> <span>Home</span></a></li>
             <li><a (click)="redirectToBoardVendas()"><i class="fa fa-circle-o"></i> <span>Controle Vendas</span></a></li>
+            <li><a (click)="redirectToProducao()"><i class="fa fa-circle-o"></i> <span>Produção</span></a></li>
             <li><a (click)="redirectToProduto()"><i class="fa fa-circle-o"></i> <span>Produto</span></a></li>
             <li><a (click)="redirectToCategoria()"><i class="fa fa-circle-o"></i> <span>Categoria</span></a></li>
             <li><a (click)="redirectToCustos()"><i class="fa fa-circle-o"></i> <span>Despesas</span></a></li>
