--- a/DosPaes/ClientApp/src/app/components/commun/list/list.component.html
+++ b/DosPaes/ClientApp/src/app/components/commun/list/list.component.html
@@ -8,29 +8,35 @@
     <li class="active"> {{text}}</li>
   </ol>
 </section>
-<section class="content">   
+<section class="content">
   <div class="container">
-  
+
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
 
         <div class="panel panel-default panel-table">
           <div class="panel-heading">
-            <div class="row">        
+            <div class="row">
               <div class="col col-xs-3">
-                <a title="Novo" (click)="redirectToCreate()" class="btn btn-primary"><em
-                  class="fa fa-plus"></em></a>
+                <a title="Novo" (click)="redirectToCreate()" class="btn btn-primary"><em class="fa fa-plus"></em></a>
               </div>
               <ng-content select="[filterComponent]"></ng-content>
             </div>
           </div>
-          
+
           <div class="panel-body">
             <table class="table table-striped table-bordered table-list">
               <thead>
                 <tr class="table-head">
                   <th><em class="fa fa-cog"></em></th>
-                  <th *ngFor="let tableHead of tableHeads">{{tableHead}}</th>
+                  <ng-container *ngFor="let tableHead of tableHeads; let i=index">
+                    <th *ngIf="i > 4" class="hidden-xs">
+                      {{tableHead}}
+                    </th>
+                    <th *ngIf="i <= 4">
+                      {{tableHead}}
+                    </th>
+                </ng-container>
                 </tr>
               </thead>
               <tbody>
@@ -41,7 +47,14 @@
                     <a title="Deletar" (click)="redirectToDelete(tableData[columnKey])" class="btn btn-danger"><em
                         class="fa fa-trash"></em></a>
                   </td>
-                  <td *ngFor="let colName of tableColNameGenerated"> {{tableData[colName]}}</td>
+                  <ng-container *ngFor="let colName of tableColNameGenerated; let i=index">
+                    <td *ngIf="i > 4" class="hidden-xs">
+                      {{tableData[colName]}}
+                    </td>
+                    <td *ngIf="i <= 4">
+                      {{tableData[colName]}}
+                    </td>
+                  </ng-container>
                 </tr>
               </tbody>
             </table>
