--- a/DosPaes/ClientApp/src/app/components/header/header.component.html
+++ b/DosPaes/ClientApp/src/app/components/header/header.component.html
@@ -1,6 +1,6 @@
 <aside class="main-sidebar">
     <!-- sidebar: style can be found in sidebar.less -->
-    <section class="sidebar" style="height: auto;">
+    <section class="sidebar" >
        
         <!-- /.search form -->
         <!-- sidebar menu: : style can be found in sidebar.less -->
@@ -9,12 +9,13 @@
             <li><a (click)="redirectToHome()"><i class="fa fa-book"></i> <span>Home</span></a></li>
             <li><a (click)="redirectToBoardVendas()"><i class="fa fa-circle-o"></i> <span>Controle Vendas</span></a></li>
             <li><a (click)="redirectToProducao()"><i class="fa fa-circle-o"></i> <span>Produção</span></a></li>
-            <li><a (click)="redirectToProduto()"><i class="fa fa-circle-o"></i> <span>Produto</span></a></li>
-            <li><a (click)="redirectToCategoria()"><i class="fa fa-circle-o"></i> <span>Categoria</span></a></li>
+            <li><a (click)="redirectToProduto()"><i class="fa fa-circle-o"></i> <span>Produtos</span></a></li>
+            <li><a (click)="redirectToCategoria()"><i class="fa fa-circle-o"></i> <span>Categorias</span></a></li>
             <li><a (click)="redirectToCustos()"><i class="fa fa-circle-o"></i> <span>Despesas</span></a></li>
             <li><a (click)="redirectToVendas()"><i class="fa fa-circle-o"></i> <span>Vendas</span></a></li>
-            <li><a (click)="redirectToCliente()"><i class="fa fa-circle-o"></i> <span>Cliente</span></a></li>
-            <li><a (click)="logMeOut()"><i class="fa fa-th"></i> <span>Log-Out</span></a></li>
+            <li><a (click)="redirectToCliente()"><i class="fa fa-circle-o"></i> <span>Clientes</span></a></li>
+            <li><a (click)="redirectToUsuario()"><i class="fa fa-circle-o"></i> <span>Usuarios</span></a></li>
+            <li><a (click)="logMeOut()"><i class="fa fa-th"></i> <span>Sair</span></a></li>
         </ul>
     </section>
     <!-- /.sidebar -->
