--- a/DosPaes/ClientApp/src/app/components/login/login.component.html
+++ b/DosPaes/ClientApp/src/app/components/login/login.component.html
@@ -5,19 +5,21 @@
 
             <form>
                 <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                    <label for="exampleInputEmail1">E-mail</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                        placeholder="Informe seu email">
+                    <small id="emailHelp" class="form-text text-muted">Nunca compartilhe seu usuário e senha!</small>
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <label for="exampleInputPassword1">Senha</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
                 </div>
                 <div class="form-check">
                     <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                    <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                    <label class="form-check-label" for="exampleCheck1">Manter Conectado</label>
                 </div>
-                <button type="submit" (click)="login()" class="btn btn-primary">Submit</button>
+                <button type="submit" (click)="login()" class="btn btn-primary">Logar</button>
+                <button (click)="redirectToCreateUser()" class="btn btn-default">Cadastrar</button>
             </form>
         </div>
         <div class="col-sm-3"> </div>
