implementando segurança no código

--- a/DosPaes/ClientApp/src/app/app.component.html
+++ b/DosPaes/ClientApp/src/app/app.component.html
@@ -17,6 +17,7 @@
         <a href="#" class="sidebar-toggle" data-toggle="push-menu" role="button">
           <span class="sr-only">Toggle navigation</span>
         </a>
+        <app-user-menu></app-user-menu>
       </nav>
     </header>
     <div class="content-wrapper">
