--- a/DosPaes/ClientApp/src/app/components/venda/delete-venda/delete-venda.component.html
+++ b/DosPaes/ClientApp/src/app/components/venda/delete-venda/delete-venda.component.html
@@ -3,7 +3,7 @@
 [iconHead]="iconHead">
   <div contentForm>
 
-   <h1>Deseja realmente deletar a venda: {{record.Id}} - {{record.ProdutoDescricao}}?</h1>
+   <h1>Deseja realmente deletar a venda: {{record.Id}} - {{record.ClienteNome}}?</h1>
    <div>
 
     <button type="button" id="btnConfirmar" [disabled]="disabled" (click)="deleteProduto()" class="btn btn-success btnStyle">Deletar</button>
