--- a/DosPaes/ClientApp/src/app/components/venda/itens-venda/itens-venda.component.html
+++ b/DosPaes/ClientApp/src/app/components/venda/itens-venda/itens-venda.component.html
@@ -22,3 +22,8 @@
   </div>
 
   <button id="btnSalvar" (click)="buttonClick()" class="btn btn-success btnStyle">Adicionar</button>
+
+  <div class="modal fade" id="modalProduto" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+  aria-hidden="true">
+  <app-add-modal-produto></app-add-modal-produto>
+</div>
